# bachelor-thesis-visual-odometry

tracking-module/: CMakeLists.txt  README.md  package.xml
tracking-module/include/target_tracking/: FeatureMatchingModule.hpp  FeatureTriangulation.hpp  Map.hpp  MapPoint.hpp
tracking-module/launch/: triangulation.launch
tracking-module/src/: FeatureMatchingModule.cpp  FeatureTriangulation.cpp  feature_triangulation_node.cpp
